--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha -R spec",
+    "commit" : "git-cz",
     "docs": "./node_modules/.bin/documentation readme --section API ./lib/badwords.js"
   },
   "repository": {
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "better-assert": "1.0.0",
+    "cz-conventional-changelog": "^3.2.0",
     "documentation": "^13.0.2",
     "mocha": "^8.0.1"
   },
@@ -32,5 +34,10 @@
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
