--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bad-words-plus",
-  "version": "0.0.8",
+  "version": "0.0.0-development",
   "description": "A javascript filter for bad words with display options",
   "main": "./lib/bad-words-plus",
   "directories": {
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha -R spec",
-    "commit" : "git-cz",
-    "docs": "./node_modules/.bin/documentation readme --section API ./lib/badwords.js"
+    "commit": "git-cz",
+    "docs": "./node_modules/.bin/documentation readme --section API ./lib/badwords.js",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ryan-berdel/bad-words-plus.git"
+    "url": "https://github.com/ryan-berdel/bad-words-plus.git"
   },
   "keywords": [
     "curse",
@@ -28,7 +29,8 @@
     "better-assert": "1.0.0",
     "cz-conventional-changelog": "^3.2.0",
     "documentation": "^13.0.2",
-    "mocha": "^8.0.1"
+    "mocha": "^8.0.1",
+    "semantic-release": "^17.1.1"
   },
   "author": "Mike P., Ryan Berdel",
   "license": "MIT",
