--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha -R spec",
     "commit": "git-cz",
-    "docs": "./node_modules/.bin/documentation readme --section API ./lib/badwords.js",
-    "semantic-release": "semantic-release"
+    "docs": "./node_modules/.bin/documentation readme --section API ./lib/badwords.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +28,7 @@
     "better-assert": "1.0.0",
     "cz-conventional-changelog": "^3.2.0",
     "documentation": "^13.0.2",
-    "mocha": "^8.0.1",
-    "semantic-release": "^17.1.1"
+    "mocha": "^8.0.1"
   },
   "author": "Mike P., Ryan Berdel",
   "license": "MIT",
