"fix(.releaserc file): fix load git plugin error"

--- a/.releaserc
+++ b/.releaserc
@@ -13,11 +13,11 @@
         [
             "@semantic-release/exec",
             {
-                
+
             }
         ],
         [
-            "@semantic-release/github",
+            "@semantic-release/git",
             {
                 "assets": [
                     "CHANGELOG.md"
