"chore(releaserc and package.json): change to load env variables from a .env file
Error occured because enviromental variables weren't loading from
system. Changed to use .env file and node-env-run. Utilizes command in
package.json to script 'ver' command to automate task."

--- a/.releaserc
+++ b/.releaserc
@@ -17,6 +17,17 @@
                     "CHANGELOG.md"
                 ]
             }
+        ],
+        [
+            "@semantic-release/github",
+            {
+                "assets": [
+                    {
+                        "path": "dist/**",
+                        "repositoryURL": "https://github.com/ryan-berdel/bad-words-plus.git" 
+                    }
+                ]
+            }
         ]
     ]
 }
